# mdx-editor

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
scripts/: fetch-ffmpeg.mjs  ffmpeg-bundle-config.mjs  pack-ci.mjs  pack.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asset_refs.rs  asset_store.rs  clipboard.rs  diagnostics.rs  error.rs  launch.rs  lib.rs  main.rs  manifest.rs  manifest_io.rs  md_import.rs  media_preview.rs  media_transcode.rs  models.rs  pdf_export.rs  vault.rs  versions.rs  webview.rs  workspace.rs
src-tauri/src/commands/: asset.rs  document.rs  export.rs  git.rs  media.rs  mod.rs  vault.rs
src-tauri/src/git_sync/: config.rs  job.rs  mod.rs  ops.rs
src-tauri/src/mdx/: crypto.rs  mod.rs  pack.rs  unpack.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: DocumentHistoryDialog.tsx  DocumentHistoryPage.tsx  DocumentPropertiesDialog.tsx  EditorLayout.tsx  EditorToolbar.tsx  ExportSuccessDialog.tsx  FfmpegErrorDetails.tsx  FileTree.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  MediaTranscodePanel.tsx  MissingRecentDocumentDialog.tsx  PasswordPromptDialog.tsx  PdfExportStatus.tsx  RecentFilesPage.tsx  Ribbon.tsx  SearchPanel.tsx  SettingsDialog.tsx  SettingsPage.tsx  SplitEditor.tsx  UnsavedDialog.tsx  VaultContextMenu.tsx  VaultTreeDragOverlay.tsx  WelcomePage.tsx  WorkspaceSidebar.tsx
src/hooks/: useAssetInsert.ts  useAutosave.ts  useDocumentActions.ts  usePrintLayout.ts  useVaultActions.ts  useVaultTreeDrag.ts  useVaultTreeMenu.ts  useWelcomeActions.ts  useWindowState.ts
src/lib/: appShortcuts.ts  assetResolver.ts  attachment.ts  diagnosticLog.ts  diagnosticLogFormat.ts  documentErrors.ts  documentHistory.ts  documentMetadata.ts  documentPaths.ts  export.ts  (+33 more)
(+15 files in other folders)
