[package]
name = "mdx-editor"
version = "0.1.4"
description = "MDX Desktop Document Editor"
authors = ["you"]
edition = "2021"

[lib]
name = "mdx_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
zip = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"
thiserror = "2"
which = "7"
md-5 = "0.10"
[target.'cfg(windows)'.dependencies]
clipboard-win = "5"
webview2-com = "0.38"
windows-core = "0.61"
